crates/fwgsl_parser/tests/snapshots/snapshot__snapshot_lex_tokens.snap
---
source: crates/fwgsl_parser/tests/snapshot.rs
expression: summary
---
[
    "KwData \"data\"",
    "UpperIdent \"Color\"",
    "Equals \"=\"",
    "UpperIdent \"Red\"",
    "Pipe \"|\"",
    "UpperIdent \"Green\"",
    "Pipe \"|\"",
    "UpperIdent \"Blue\"",
    "Ident \"show\"",
    "Colon \":\"",
    "UpperIdent \"Color\"",
    "Arrow \"->\"",
    "UpperIdent \"I32\"",
    "Ident \"show\"",
    "Ident \"c\"",
    "Equals \"=\"",
    "KwMatch \"match\"",
    "Ident \"c\"",
    "Pipe \"|\"",
    "UpperIdent \"Red\"",
    "Arrow \"->\"",
    "IntLiteral \"0\"",
    "Pipe \"|\"",
    "UpperIdent \"Green\"",
    "Arrow \"->\"",
    "IntLiteral \"1\"",
    "Pipe \"|\"",
    "UpperIdent \"Blue\"",
    "Arrow \"->\"",
    "IntLiteral \"2\"",
    "Ident \"add\"",
    "Colon \":\"",
    "UpperIdent \"I32\"",
    "Arrow \"->\"",
    "UpperIdent \"I32\"",
    "Arrow \"->\"",
    "UpperIdent \"I32\"",
    "Ident \"add\"",
    "Ident \"x\"",
    "Ident \"y\"",
    "Equals \"=\"",
    "Ident \"x\"",
    "Plus \"+\"",
    "Ident \"y\"",
    "Ident \"main\"",
    "Colon \":\"",
    "UpperIdent \"I32\"",
    "Arrow \"->\"",
    "UpperIdent \"I32\"",
    "Ident \"main\"",
    "Ident \"x\"",
    "Equals \"=\"",
    "KwLet \"let\"",
    "Ident \"y\"",
    "Equals \"=\"",
    "Ident \"add\"",
    "Ident \"x\"",
    "IntLiteral \"1\"",
    "KwIn \"in\"",
    "Ident \"show\"",
    "UpperIdent \"Red\"",
    "Eof \"\"",
]
